=head1 NAME

Changes - Apache mod_perl change logfile

=head1 CHANGES

=over 3

=item 1.19_01-dev

ensure perl_setup_env() is called just once per-request
[Salvador Ortiz Garcia <sog@msg.com.mx>]

:common Apache::Constants are compiled at bootstrap time, so CVs are
shared and AUTOLOAD is avoided, which was known to cause a spin
while loading SERVER_ERROR for particular Perl errors

<Perl> sections now use 1.3.7-dev's cmd_parms->context to cure many
known, old bugs, e.g. @DirectoryIndex outside of %Location, .htaccess
and many more  [Salvador Ortiz Garcia <sog@msg.com.mx>]

fix bug where top-level PerlSetEnv's would be lost after 1st request

fix bug in Apache::ModuleConfig->get [Dave Hayes <dave@jetcafe.org>]

fix rwrite error message [Eric Cholet <cholet@logilune.com>]

Change Apache::SizeLimit so that it supports Solaris 2.6 and above
[Brian Moseley <ix@maz.org>]

Fixed apaci/load_modules.pl.PL to properly fixup log_agent and
log_referer when loaded as DSOs. [Vivek Khera <vivek@khera.org>]

Fixed apaci/mod_perl.config.sh to remove the ccdlflags from the
PERL_LIBS variable when building under bsd/os 4.x, since that causes
errors when passing "cc" oriented flags to "ld".  I suspect this
should be done for all platforms, as passing cc options to ld just
seems wrong to me.  Also fixed up Makefile.PL to override Apache's
notion of LDFLAGS_SHLIB_EXPORT to use Perl's idea of the proper flags
when building as a DSO under APACI.  [Vivek Khera <vivek@khera.org>]

=item 1.19 - April 7, 1999

Apache::Leak fixes for win32 
[Matthew Sergeant <Matthew.Sergeant@eml.ericsson.se>]

Apache::Request upload tests are skipped #ifdef USE_SFIO 

$r->send_fd() will croak() #ifdef USE_SFIO

added $r->mtime method [Andreas J. Koenig <andreas.koenig@anima.de>]

fix so version info is not inserted too early (i.e. before Apache/x.x.x)

new Apache::PerlRun::namespace_from() method, returns
$r->uri - $r->path_info, can be overridden as Apache::RegistryNG does to
return $r->filename instead
