@@ -5,23 +5,15 @@ SHORT TERM STUFF (this section should always be empty in a release version!)
 
 - Paul J. Reder's aix/dso port
 
-- modules/file #6
-
-- Salvador's patch to avoid %ENV setup on subrequests
+- modules/file + -T
 
 - <Perl> patch for *Match from Craig Lien <lien@rrnet.com>
 
 - win32 table patch Trung Tran-Duc <trung.tranduc@prague.ixos.cz>
 
-- PATH patch Bertrand Demiddelaer <wing_co@hotmail.com>
-
 - sfio patches John Hughes <john@calva.com>
 
-- $r->set_handlers(PerlAuthenHandler => undef) stomps other config!?
-
 - fix $Apache::Server::Starting under dso
-
-- PerlSetEnv gets lost?
 
 - Apache::Include->virtual should return run() value, not status()
 
